Automatically backed up by Learn

--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -7,6 +7,9 @@
   </head>
   <body id="page-top">
     
+    <p><h1>Your account balance is $<%= @user.balance %>. </h1></p>
+    
+    <p><h3><a href="/logout">Log Out</a></h3></p>
 
   </body>
 </html>
