--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,6 +8,16 @@
   <body id="page-top">
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
+    
+    <form method="post" action="/login">
+      <p>Username: 
+        <input type="text" value="username" name="username">
+      </p>
+      <p>Password: 
+        <input type="text" value="password" name="password">
+      </p>
+      <input type="submit" value="Log In" name="submit">
+    </form>
 
   </body>
 </html>
